- create mixin for flex in mixin file - add colors variable in variables file

--- a/LESS/variables.less
+++ b/LESS/variables.less
@@ -1,2 +1,8 @@
+// Colors
+@primary-color: #FFBA5A;
+@secondary-color: #2D283D;
+@greyscale: #fcf9ED;
+
+
 // Breakpoints 
 @desktop: ~"(min-width: 800px)";
