--- a/LESS/index.less
+++ b/LESS/index.less
@@ -2,3 +2,6 @@
 @import "mixins.less";
 @import "global.less";
 @import "reset.less";
+@import "home.less";
+@import "header.less";
+@import "../Components/Nav/nav.less";
