- Add Square pattern and Refactor existing HTML, CSS   - declare font sizes in variable.less   - add square pattern png image in assets
  - Add box pattern on HTML
    - create pattern-container div
    - add square-pattern div to pattern container
    - add square-pattern and pattern-container style in
      home.less file, import square parttern image.

  - Refactor HTML and CSS build:
    - add flex and text-shadow to home-content style
    - refactor desktop width and height on desktop home-content
    - refactor font-sizes, width and height of divs to add
      responsiveness.
    - refactor postioning, width, font-size, spacing, and padding
      on nav in nav.less

--- a/LESS/header.less
+++ b/LESS/header.less
@@ -1,27 +1,43 @@
 .topbar {
-  width: 100%;
-  position: fixed;
   top: 0;
   left: 0;
-  display: flex;
-  justify-content: space-between;
   padding: 3%;
+  width: 100%;
   z-index: 999;
+  display: flex;
+  position: fixed;
+  justify-content: space-between;
 
   @media @desktop {
     position: relative;
-    justify-content: flex-start;
     align-items: center;
+    justify-content: flex-start;
   }
 
   .logo {
+    width: 40px;
+    height: 50px;
     z-index: 999;
-    font-size: 2rem;
+    font-size: 1.5rem;
+    border-radius: 8px;
     transition: 0 ease-in-out;
+    .flex(row, center, center);
+    background-color: @greyscale;
+
+    @media @desktop {
+      font-size: @small-font;
+    }
+
+    span {
+      color: @primary-color;
+      font-weight: bold;
+      line-height: 100%;
+    }
   }
 
   .nav-btn {
     z-index: 999;
+    font-size: @text-font;
 
     @media @desktop {
       display: none;
