--- a/LESS/variables.less
+++ b/LESS/variables.less
@@ -3,6 +3,11 @@
 @secondary-color: #2D283D;
 @greyscale: #fcf9ED;
 
+// fonts-sizes
+@large-font: 7rem;
+@medium-font: 3.5rem;
+@text-font: 2.5rem;
+@small-font: 2rem;
 
 // Breakpoints 
 @desktop: ~"(min-width: 800px)";
