--- a/CSS/index.css
+++ b/CSS/index.css
@@ -1,41 +1,3 @@
-* {
-  box-sizing: border-box;
-}
-html,
-body {
-  font-size: 62.5%;
-}
-.container {
-  font-family: Arial, Helvetica, sans-serif;
-  padding: 3%;
-  font-size: 2rem;
-  color: #fcf9ED;
-}
-@media (min-width: 800px) {
-  .container {
-    width: 860px;
-    margin: 0 auto;
-    padding: 0;
-    font-size: 1.5rem;
-    border: 1px solid red;
-  }
-}
-.container .logo {
-  height: 50px;
-  width: 40px;
-  border-radius: 16px;
-  background-color: #fcf9ed;
-  display: flex;
-  justify-content: center;
-  align-content: center;
-}
-.container .logo span {
-  color: #FFBA5A;
-  font-family: Arial;
-  font-size: 100%;
-  font-weight: bold;
-  line-height: 100%;
-}
 /* http://meyerweb.com/eric/tools/css/reset/ 
    v2.0 | 20110126
    License: none (public domain)
@@ -164,24 +126,74 @@ table {
   border-collapse: collapse;
   border-spacing: 0;
 }
+* {
+  box-sizing: border-box;
+}
+html,
+body {
+  font-size: 85%;
+  font-family: Arial, Helvetica, sans-serif;
+}
+@media (min-width: 800px) {
+  html,
+  body {
+    font-size: 62.5%;
+  }
+}
+.container {
+  padding: 3%;
+  height: 100%;
+  color: #fcf9ED;
+}
+@media (min-width: 800px) {
+  .container {
+    width: 860px;
+    margin: 0 auto;
+    padding: 0;
+  }
+}
+.container .pattern-container {
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  position: absolute;
+  justify-content: flex-end;
+}
+@media (min-width: 800px) {
+  .container .pattern-container {
+    left: auto;
+    width: inherit;
+  }
+}
+.container .pattern-container .square-pattern {
+  width: 370px;
+  height: 100%;
+  background-repeat: no-repeat;
+  background-image: url('../assets/square-pattern.png');
+}
 .bg {
   width: 100%;
   height: 100vh;
   background-color: #FFBA5A;
 }
 .bg .home-content {
+  width: 100%;
+  height: 90vh;
+  margin-top: 10%;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  width: 100%;
-  height: 90vh;
-  font-size: 2rem;
+  text-shadow: 0.5px 0.5px #2D283D;
 }
 @media (min-width: 800px) {
   .bg .home-content {
-    padding: 13%;
-    height: 100%;
+    width: 70%;
+    height: 80%;
+    padding: 10%;
+    margin-top: 5%;
     align-items: flex-start;
   }
 }
@@ -197,15 +209,14 @@ table {
   }
 }
 .bg .home-content .sub-heading h2 {
-  font-size: 3.5rem;
-  font-weight: 700;
+  font-weight: bold;
   letter-spacing: 20px;
-  padding: 5px;
+  font-size: 7rem;
 }
 .bg .home-content .sub-heading p {
-  width: 80%;
   text-align: center;
-  font-size: 1.5rem;
+  padding: 5px;
+  font-size: 2.5rem;
 }
 @media (min-width: 800px) {
   .bg .home-content .sub-heading p {
@@ -214,44 +225,64 @@ table {
 }
 .bg .home-content .sub-heading button {
   width: 80%;
-  background-color: #fcf9ED;
-  padding: 20px;
-  margin: 10%;
+  margin: 10% 0;
+  padding: 15px;
   border-radius: 10px;
-  font-size: 1rem;
   color: #FFBA5A;
+  font-size: 2rem;
+  background-color: #fcf9ED;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
 }
 @media (min-width: 800px) {
   .bg .home-content .sub-heading button {
-    width: 30%;
+    width: 40%;
     float: right;
+    padding: 1rem;
   }
 }
 .topbar {
-  width: 100%;
-  position: fixed;
   top: 0;
   left: 0;
-  display: flex;
-  justify-content: space-between;
   padding: 3%;
+  width: 100%;
   z-index: 999;
+  display: flex;
+  position: fixed;
+  justify-content: space-between;
 }
 @media (min-width: 800px) {
   .topbar {
     position: relative;
-    justify-content: flex-start;
     align-items: center;
+    justify-content: flex-start;
   }
 }
 .topbar .logo {
+  width: 40px;
+  height: 50px;
   z-index: 999;
-  font-size: 2rem;
+  font-size: 1.5rem;
+  border-radius: 8px;
   transition: 0 ease-in-out;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  background-color: #fcf9ED;
+}
+@media (min-width: 800px) {
+  .topbar .logo {
+    font-size: 2rem;
+  }
+}
+.topbar .logo span {
+  color: #FFBA5A;
+  font-weight: bold;
+  line-height: 100%;
 }
 .topbar .nav-btn {
   z-index: 999;
+  font-size: 2.5rem;
 }
 @media (min-width: 800px) {
   .topbar .nav-btn {
@@ -259,40 +290,41 @@ table {
   }
 }
 .navlinks {
-  left: 0;
   top: 0;
-  position: fixed;
+  left: 0;
   width: 0%;
+  z-index: 1;
   height: 100%;
-  background-color: #2D283D;
+  position: fixed;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  z-index: 1;
+  background-color: #2D283D;
 }
 @media (min-width: 800px) {
   .navlinks {
+    width: 55%;
     position: unset;
     flex-direction: row;
-    justify-content: space-between;
-    width: 50%;
+    justify-content: space-around;
     background-color: transparent;
-    margin-left: 30px;
   }
 }
 .navlinks .nav-link {
-  text-decoration: none;
   opacity: 0;
-  color: #fcf9ED;
   padding: 4%;
+  color: #fcf9ED;
+  text-decoration: none;
+  font-size: 2.5rem;
+  text-shadow: 0.5px 0.5px #2D283D;
 }
 @media (min-width: 800px) {
   .navlinks .nav-link {
     opacity: 1;
+    padding: 1.5% 0;
   }
 }
 .navlinks .active {
-  text-decoration: underline;
-  text-decoration-color: #fcf9ED;
+  border-bottom: 1px solid #fcf9ED;
 }
