--- a/Components/Nav/nav.less
+++ b/Components/Nav/nav.less
@@ -1,35 +1,36 @@
 .navlinks {
-  left: 0;
   top: 0;
-  position: fixed;
+  left: 0;
   width: 0%;
-  height: 100%;
-  background-color: @secondary-color;
-  .flex(column, center, center);
   z-index: 1;
+  height: 100%;
+  position: fixed;
+  .flex(column, center, center);
+  background-color: @secondary-color;
 
   @media @desktop {
+    width: 55%;
     position: unset;
     flex-direction: row;
-    justify-content: space-between;
-    width: 50%;
+    justify-content: space-around;
     background-color: transparent;
-    margin-left: 30px;
   }
 
   .nav-link {
-    text-decoration: none;
     opacity: 0;
-    color: @greyscale;
     padding: 4%;
+    color: @greyscale;
+    text-decoration: none;
+    font-size: @text-font;
+    text-shadow: 0.5px 0.5px @secondary-color;
 
     @media @desktop {
       opacity: 1;
+      padding: 1.5% 0;
     }
   }
 
   .active {
-    text-decoration: underline;
-    text-decoration-color: @greyscale;
+    border-bottom: 1px solid @greyscale;
   }
 }
