--- a/LESS/global.less
+++ b/LESS/global.less
@@ -4,38 +4,26 @@
 
 html,
 body {
-  font-size: 62.5%;
+  font-size: 85%;
+  font-family: Arial, Helvetica, sans-serif;
+
+  @media @desktop {
+    font-size: 62.5%;
+  }
 }
 
 .container {
-  font-family: Arial, Helvetica, sans-serif;
   padding: 3%;
-  font-size: 2rem;
+  height: 100%;
   color: @greyscale;
 
   @media @desktop {
     width: 860px;
     margin: 0 auto;
     padding: 0;
-    font-size: 1.5rem;
-    border: 1px solid red
-  }
-
-  .logo {
-    height: 50px;
-    width: 40px;
-    border-radius: 16px;
-    background-color: #fcf9ed;
-    display: flex;
-    justify-content: center;
-    align-content: center;
-
-    span {
-      color: @primary-color;
-      font-family: Arial;
-      font-size: 100%;
-      font-weight: bold;
-      line-height: 100%;
-    }
   }
 }
+
+// div, span, section, nav, header, body {
+//   border: 1px solid blue;
+// }
