--- a/LESS/home.less
+++ b/LESS/home.less
@@ -1,17 +1,45 @@
+.container {
+  .pattern-container {
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    position: absolute;
+    justify-content: flex-end;
+
+    @media @desktop {
+      left: auto;
+      width: inherit;
+    }
+
+    .square-pattern {
+      width: 370px;
+      height: 100%;
+      background-repeat: no-repeat;
+      background-image: url('../assets/square-pattern.png');
+    }
+  }
+}
+
 .bg {
   width: 100%;
   height: 100vh;
   background-color: @primary-color;
 
   .home-content {
-    .flex(column, center, center);
     width: 100%;
     height: 90vh;
-    font-size: 2rem;
+    margin-top: 10%;
+    .flex(column, center, center);
+    text-shadow: 0.5px 0.5px @secondary-color;
 
     @media @desktop {
-      padding: 13%;
-      height: 100%;
+      width: 70%;
+      height: 80%;
+      padding: 10%;
+      margin-top: 5%;
+
       align-items: flex-start;
     }
 
@@ -23,16 +51,15 @@
       }
 
       h2 {
-        font-size: 3.5rem;
-        font-weight: 700;
+        font-weight: bold;
         letter-spacing: 20px;
-        padding: 5px;
+        font-size: @large-font;
       }
 
       p {
-        width: 80%;
         text-align: center;
-        font-size: 1.5rem;
+        padding: 5px;
+        font-size: @text-font;
 
         @media @desktop {
           text-align: left;
@@ -41,17 +68,18 @@
 
       button {
         width: 80%;
-        background-color: @greyscale;
-        padding: 20px;
-        margin: 10%;
+        margin: 10% 0;
+        padding: 15px;
         border-radius: 10px;
-        font-size: 1rem;
         color: @primary-color;
+        font-size: @small-font;
+        background-color: @greyscale;
         box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
 
         @media @desktop {
-          width: 30%;
+          width: 40%;
           float: right;
+          padding: 1rem;
         }
       }
     }
