--- a/LESS/home.less
+++ b/LESS/home.less
@@ -1,87 +1,149 @@
-.container {
-  .pattern-container {
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    position: absolute;
-    justify-content: flex-end;
-
-    @media @desktop {
-      left: auto;
-      width: inherit;
-    }
-
-    .square-pattern {
-      width: 370px;
-      height: 100%;
-      background-repeat: no-repeat;
-      background-image: url('../assets/square-pattern.png');
-    }
-  }
-}
-
 .bg {
   width: 100%;
-  height: 100vh;
-  background-color: @primary-color;
+  height: 100%;
 
-  .home-content {
-    width: 100%;
-    height: 90vh;
-    margin-top: 10%;
-    .flex(column, center, center);
-    text-shadow: 0.5px 0.5px @secondary-color;
-
-    @media @desktop {
-      width: 70%;
-      height: 80%;
-      padding: 10%;
-      margin-top: 5%;
-
-      align-items: flex-start;
-    }
-
-    .sub-heading {
-      .flex(column, flex-start, center);
+  .container {
+    .home-content {
+      width: 100%;
+      height: 55vh;
+      margin-top: 20%;
+      margin-bottom: 10px;
+      .flex(column, center, center);
+      text-shadow: 0.5px 0.5px @secondary-color;
 
       @media @desktop {
-        display: block;
+        width: 70%;
+        height: 52vh;
+        margin-top: 0; 
+        padding-left: 5%;
+        padding-right: 5%;
+        padding-top: 40%;
+        padding-bottom: 10%;
+        align-items: flex-start;
+        margin-bottom: 5px;
+      }
+
+      @media @tablet {
+        margin-bottom: 40px;        
+      }
+
+      .sub-heading {
+        .flex(column, flex-start, center);
+
+        @media @desktop {
+          display: block;
+        }
+
+        h2 {
+          font-weight: bold;
+          letter-spacing: 20px;
+          font-size: @large-font;
+        }
+
+        p {
+          text-align: center;
+          padding: 5px;
+          font-size: @text-font;
+
+          @media @desktop {
+            text-align: left;
+          }
+        }
+
+        a {
+          width: 80%;
+          margin: 10% 0;
+          padding: 15px;
+          border-radius: 10px;
+          color: @primary-color;
+          font-size: @small-font;
+          background-color: @greyscale;
+          text-decoration: none;
+          text-align: center;
+          box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+
+          &:hover {
+            animation: bounce 0.25s 2 linear alternate;
+          }
+
+          @keyframes bounce {
+            0% {
+              transform: rotate(0deg);
+            }
+            50% {
+              transform: rotate(3deg);
+            }
+            100% {
+              transform: rotate(-3deg);
+            }
+          }
+
+          @media @desktop {
+            position: relative;
+            width: 40%;
+            float: right;
+            padding: 1rem;
+            z-index: 999;
+          }
+        }
+      }
+    } // home-content
+
+    .home-cards{
+      width: 100%;
+      border-radius: 4px;
+      margin-bottom: 10%;
+      color: @secondary-color;
+      padding: 10px;
+      background-color: @greyscale;
+      box-shadow: 0 19px 38px rgba(0,0,0,0.30), 0 15px 12px rgba(0,0,0,0.22);
+      
+      @media @desktop {
+        width: 85%;
+        margin: 0 10%;
+        margin-bottom: 10%;
       }
 
       h2 {
-        font-weight: bold;
-        letter-spacing: 20px;
-        font-size: @large-font;
-      }
-
-      p {
         text-align: center;
-        padding: 5px;
-        font-size: @text-font;
-
-        @media @desktop {
-          text-align: left;
-        }
-      }
-
-      button {
-        width: 80%;
-        margin: 10% 0;
-        padding: 15px;
-        border-radius: 10px;
-        color: @primary-color;
+        font-family: Arial, Helvetica, sans-serif;
         font-size: @small-font;
-        background-color: @greyscale;
-        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+        text-decoration: underline;
+        font-weight: bold;
+        letter-spacing: 2px;
+        margin: 10px;
+      }
+      
+      .card-container {
+        .flex(column, center, center);
+        margin: 10px;
+        
+        @media @tablet {
+          flex-direction: row;
+        }
+        
+        .card {
+          margin: 2px;
+          padding: 5%;
+          border-radius: 5px;
+          border: 1px solid gray;
+          transition: .2s ease-in-out;
 
-        @media @desktop {
-          width: 40%;
-          float: right;
-          padding: 1rem;
+          &:hover {
+            transform: scale(0.8);
+          }
+
+          img {
+            width: 100%;
+          }
+
+          p {
+            text-align: center;
+            padding-top: 20px;
+            font-size: 1.5rem;
+          }
         }
       }
     }
-  }
-}
+  } // container
+} // bg
