--- a/LESS/index.less
+++ b/LESS/index.less
@@ -5,3 +5,5 @@
 @import "home.less";
 @import "header.less";
 @import "../Components/Nav/nav.less";
+@import "../Components/About/about.less";
+@import "../Components/Gallery/gallery.less";
