--- a/LESS/index.less
+++ b/LESS/index.less
@@ -7,3 +7,4 @@
 @import "../Components/Nav/nav.less";
 @import "../Components/About/about.less";
 @import "../Components/Gallery/gallery.less";
+@import "contact.less";
