--- a/LESS/variables.less
+++ b/LESS/variables.less
@@ -1,13 +1,13 @@
 // Colors
 @primary-color: #FFBA5A;
-@secondary-color: #2D283D;
+@text-color: #2D283D;
 @greyscale: #fcf9ED;
 
 // fonts-sizes
-@large-font: 7rem;
-@medium-font: 3.5rem;
-@text-font: 2.5rem;
-@small-font: 2rem;
+@large-font: 7rem; // 70px @ 10px base
+@medium-font: 3.5rem; // 35px @ 10px base
+@text-font: 2.5rem; // 25px @ 10px base
+@small-font: 2rem; // 20px @ 10px base
 
 // Breakpoints 
 @desktop: ~"(min-width: 800px)";
