--- a/Components/Nav/nav.less
+++ b/Components/Nav/nav.less
@@ -2,11 +2,11 @@
   top: 0;
   left: 0;
   width: 0%;
-  z-index: 999;
+  z-index: 950;
   height: 100%;
   position: fixed;
   .flex(column, center, center);
-  background-color: @secondary-color;
+  background-color: white;
 
   @media @desktop {
     width: 55%;
@@ -23,11 +23,14 @@
     color: @greyscale;
     text-decoration: none;
     font-size: @text-font;
-    text-shadow: 0.5px 0.5px @secondary-color;
+    color: @primary-color;
+    font-weight: bold;
 
     @media @desktop {
       opacity: 1;
       padding: 1.5% 0;
+      color: @greyscale;
+      font-weight: lighter;
     }
   }
 
