--- a/LESS/global.less
+++ b/LESS/global.less
@@ -7,7 +7,7 @@ body {
   width: 100%;
   height: 100%;
   font-size: 55%;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: Arial;
   background-color: @primary-color;
   scroll-behavior: smooth;
 
@@ -21,6 +21,7 @@ body {
   padding-bottom: 5%;
   height: 100%;
   color: @greyscale;
+  opacity: 0;
 
   @media @desktop {
     padding: 0;
