--- a/LESS/header.less
+++ b/LESS/header.less
@@ -24,6 +24,7 @@
   }
   
   .logo {
+    position: relative;
     width: 40px;
     height: 50px;
     z-index: 999;
@@ -47,7 +48,7 @@
   .nav-btn {
     z-index: 1000;
     font-size: @medium-font;
-    color: @secondary-color;
+    color: @text-color;
 
     @media @desktop {
       display: none;
