--- a/LESS/home.less
+++ b/LESS/home.less
@@ -7,14 +7,13 @@
       width: 100%;
       height: 55vh;
       margin-top: 20%;
-      margin-bottom: 10px;
       .flex(column, center, center);
-      text-shadow: 0.5px 0.5px @secondary-color;
+      text-shadow: 0.5px 0.5px @text-color;
 
       @media @desktop {
         width: 70%;
         height: 52vh;
-        margin-top: 0; 
+        margin-top: 0;
         padding-left: 5%;
         padding-right: 5%;
         padding-top: 40%;
@@ -24,7 +23,7 @@
       }
 
       @media @tablet {
-        margin-bottom: 40px;        
+        margin-bottom: 40px;
       }
 
       .sub-heading {
@@ -61,9 +60,12 @@
           text-decoration: none;
           text-align: center;
           box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+          transition: .4s ease-in;
 
           &:hover {
-            animation: bounce 0.25s 2 linear alternate;
+            animation: bounce 0.4s 4 linear alternate;
+            background-color: @text-color;
+            color: @greyscale;
           }
 
           @keyframes bounce {
@@ -71,10 +73,10 @@
               transform: rotate(0deg);
             }
             50% {
-              transform: rotate(3deg);
+              transform: rotate(10deg);
             }
             100% {
-              transform: rotate(-3deg);
+              transform: rotate(-10deg);
             }
           }
 
@@ -87,18 +89,20 @@
           }
         }
       }
-    } // home-content
+    }
 
-    .home-cards{
+    .home-cards {
       width: 100%;
       border-radius: 4px;
       margin-bottom: 10%;
-      color: @secondary-color;
+      color: @text-color;
       padding: 10px;
       background-color: @greyscale;
-      box-shadow: 0 19px 38px rgba(0,0,0,0.30), 0 15px 12px rgba(0,0,0,0.22);
-      
+      box-shadow: 0 2px 17px 0 rgba(0,0,0,0.5);
+
       @media @desktop {
+        display: flex;
+        flex-direction: column;
         width: 85%;
         margin: 0 10%;
         margin-bottom: 10%;
@@ -113,21 +117,21 @@
         letter-spacing: 2px;
         margin: 10px;
       }
-      
+
       .card-container {
         .flex(column, center, center);
         margin: 10px;
-        
+
         @media @tablet {
           flex-direction: row;
         }
-        
+
         .card {
           margin: 2px;
           padding: 5%;
           border-radius: 5px;
           border: 1px solid gray;
-          transition: .2s ease-in-out;
+          transition: 0.2s ease-in-out;
 
           &:hover {
             transform: scale(0.8);
